--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-[url('/src/assets/bg.jpg')] mx-[30px] md:mx-[70px] mt-[20px] mb-[50px] md:mb-[120px] text-[#FFFFFF] bg-cover">
+  <body
+    class="bg-[url('/assets/bg.jpg')] mx-[30px] md:mx-[70px] mt-[20px] mb-[50px] md:mb-[120px] text-[#FFFFFF] bg-cover"
+  >
     <div id="root" class="max-w-[1440px] m-auto"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
